Updated scrollability for certain boxed elements

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h1>Ryan Smaller - IT B.S.</h1>
                 </header>
                 <div id="body-div">
-                    <div id="misc-images">
+                    <div id="misc-images" class="scrollable">
                         <p>Misc Images Here</p>
                     </div>
                     <div id="greater-portrait-photo">
@@ -31,7 +31,7 @@
                             <img height="100%" src="resources/images/portrait-photo.jpg" alt="Portrait Photo">
                         </div>
                         <div id="about-nav">
-                            <div id="about-me">
+                            <div id="about-me" class="scrollable">
                                 <p>About Me Here</p>
                             </div>
                             <p class="hidden"><a href="#start-content">Skip Navigation</a></p>
@@ -43,7 +43,7 @@
                             <p class="hidden" id="#start-content">Content After Navigation Bar</p>
                         </div>
                     </div>
-                    <div id="credentials">
+                    <div id="credentials" class="scrollable">
                         <a href="https://www.comptia.org/certifications/a" class="link" target="_blank"><img src="resources/images/aplus-icon.svg" width="100" height="100"></a>
                         <a href="https://w3.testout.com/pro-certifications/pc-pro" class="link" target="_blank"><img src="resources/images/testout-icon.png"></a>
                         <a href="https://meta.extremenetworks.com/e_certifications/extreme-networks-sales-specialist/" class="link" target="_blank"><img src="resources/images/ess-icon.png"></a>
