--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                         </a> Graphical Subnetter &#40;SubnetterGui&#41;
                     </p>
                     <div class="portfolio-image-container" id="subnettergui-image-container"></div> <!-- All portfolio images are 587x320, the max resolution they should appear in 1080p fullscreen. -->
-                    <p>A graphical subnetting calculator and studying tool for IT students who want to learn about subnetting, classful addressing, or IPv6.</p>
+                    <p class="clippable">A graphical subnetting calculator and studying tool for IT students who want to learn about subnetting, classful addressing, or IPv6.</p>
                     <p class="portfolio-link"><a target="_blank" href="https://github.com/rsmaller/subnettergui" class="link">Access SubnetterGui.</a></p>
                 </div>
                 <div class="portfolio-unit" id="hashlet">
@@ -41,8 +41,8 @@
                         </a> Text and File Hashing Tool &#40;Hashlet&#41;
                     </p>
                     <div class="portfolio-image-container" id="hashlet-image-container"></div>
-                    <p>A CLI script for generating pseudo-hashes or pseudo-checksums for demonstration purposes.</p>
-                    <p class="portfolio-link""><a target="_blank" href="resources/downloadables/hashlet.py" class="link" download>Access Hashlet.</a></p> <!-- Download link attribute cited from www.w3schools.com/howto/howto_html_download_link.asp -->
+                    <p class="clippable">A CLI script for generating pseudo-hashes or pseudo-checksums for demonstration purposes.</p>
+                    <p class="portfolio-link"><a target="_blank" href="resources/downloadables/hashlet.py" class="link" download>Access Hashlet.</a></p> <!-- Download link attribute cited from www.w3schools.com/howto/howto_html_download_link.asp -->
                 </div>
             </div>
             <div class="vertical-div">
@@ -53,7 +53,7 @@
                         </a> CLI Subnetter &#40;Subnetter&#41;
                     </p>
                     <div class="portfolio-image-container" id="subnetter-image-container"></div>
-                    <p>A CLI-based subnet calculator written in C.</p>
+                    <p class="clippable">A CLI-based subnet calculator written in C.</p>
                     <p class="portfolio-link"><a target="_blank" href="https://github.com/rsmaller/subnetter" class="link">Access Subnetter.</a></p>
                 </div>
                 <div class="portfolio-unit" id="cryptik">
@@ -63,7 +63,7 @@
                         </a> Vigen&#232;re Ciphering Tool &#40;Cryptik&#41;
                     </p>
                     <div class="portfolio-image-container" id="cryptik-image-container"></div>
-                    <p>A CLI script for encoding and decoding Vigen&#232;re-ciphered text with a key.</p>
+                    <p class="clippable">A CLI script for encoding and decoding Vigen&#232;re-ciphered text with a key.</p>
                     <p class="portfolio-link"><a target="_blank" href="resources/downloadables/cryptik.py" class="link" download>Access Cryptik.</a></p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                         </a> CLI Subnetter &#40;Subnetter++&#41;
                     </p>
                     <div class="portfolio-image-container" id="subnetterplusplus-image-container"></div>
-                    <p>A more robust version of the C CLI-based subnet calculator, re-written in C++.</p>
+                    <p class="clippable">A more robust version of the C CLI-based subnet calculator, re-written in C++.</p>
                     <p class="portfolio-link"><a target="_blank" href="https://github.com/rsmaller/subnetterplusplus" class="link">Access Subnetter++.</a></p>
                 </div>
                 <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p>
