Updated contact lists to use a sort of list pseudo-element for going down a line without a dot

--- a/contact.html
+++ b/contact.html
@@ -137,9 +137,11 @@
                             <ul id="availability-list"> <!-- Whitespace character references from https://stackoverflow.com/questions/8515365/are-there-other-whitespace-codes-like-nbsp-for-half-spaces-em-spaces-en-space -->
                                 <li>Sunday:&emsp;&emsp;&ensp;&nbsp;Unavailable</li>
                                 <li>Monday:&emsp;&emsp;&ensp;2:30 P.M. &ndash; 9:00 P.M.</li>
-                                <li>Tuesday:&emsp;&emsp;&nbsp;&nbsp;12:30 P.M. &ndash; 1:30 P.M.<br class="force-wrap">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;5:30 P.M. &ndash; 6:30 P.M.</li>
+                                <li>Tuesday:&emsp;&emsp;&nbsp;&nbsp;12:30 P.M. &ndash; 1:30 P.M.</li>
+                                <li class="subentry">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;5:30 P.M. &ndash; 6:30 P.M.</li>
                                 <li>Wednesday:&emsp;2:30 P.M. &ndash; 9:00 P.M.</li>
-                                <li>Thursday:&emsp;&emsp;12:30 P.M. &ndash; 1:30 P.M.<br class="force-wrap">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;5:30 P.M. &ndash; 6:30 P.M.</li>
+                                <li>Thursday:&emsp;&emsp;12:30 P.M. &ndash; 1:30 P.M.</li>
+                                <li class="subentry">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&ensp;5:30 P.M. &ndash; 6:30 P.M.</li>
                                 <li>Friday:&emsp;&emsp;&emsp;&ensp;2:30 P.M. &ndash; 9:00 P.M.</li>
                                 <li>Saturday:&emsp;&emsp;&nbsp;Unavailable</li>
                             </ul>
