--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                 <div class="portfolio-unit" id="subnettergui">
                     <p class="portfolio-name-header">
                         <a href="https://isocpp.org/" class="link force-no-decoration" target="_blank">
-                            <img class="inlined-image-container" src="resources/images/cpp-logo.png" width="20" height="23" alt="C Plus Plus Icon">
+                            <img class="inlined-image-container" src="resources/images/logos/cpp-logo.png" width="20" height="23" alt="C Plus Plus Icon">
                         </a> Graphical Subnetter &#40;SubnetterGui&#41;
                     </p>
                     <div class="portfolio-image-container" id="subnettergui-image-container"></div> <!-- All portfolio images are 587x320, the max resolution they should appear in 1080p fullscreen. -->
@@ -37,7 +37,7 @@
                 <div class="portfolio-unit" id="hashlet">
                     <p class="portfolio-name-header">
                         <a href="https://www.python.org/about/" class="link force-no-decoration" target="_blank">
-                            <img class="inlined-image-container" src="resources/images/python-logo.png" width="20" height="20" alt="Python Icon">
+                            <img class="inlined-image-container" src="resources/images/logos/python-logo.png" width="20" height="20" alt="Python Icon">
                         </a> Text and File Hashing Tool &#40;Hashlet&#41;
                     </p>
                     <div class="portfolio-image-container" id="hashlet-image-container"></div>
@@ -49,7 +49,7 @@
                 <div class="portfolio-unit" id="subnetter">
                     <p class="portfolio-name-header">
                         <a href="https://www.gnu.org/software/gnu-c-manual/gnu-c-manual.html" class="link force-no-decoration" target="_blank">
-                        <img class="inlined-image-container" src="resources/images/c-logo.png" width="20" height="23" alt="C Icon">
+                        <img class="inlined-image-container" src="resources/images/logos/c-logo.png" width="20" height="23" alt="C Icon">
                         </a> CLI Subnetter &#40;Subnetter&#41;
                     </p>
                     <div class="portfolio-image-container" id="subnetter-image-container"></div>
@@ -59,7 +59,7 @@
                 <div class="portfolio-unit" id="cryptik">
                     <p  class="portfolio-name-header">
                         <a href="https://www.python.org/about/" class="link force-no-decoration" target="_blank">
-                            <img class="inlined-image-container" src="resources/images/python-logo.png" width="20" height="20" alt="Python Icon">
+                            <img class="inlined-image-container" src="resources/images/logos/python-logo.png" width="20" height="20" alt="Python Icon">
                         </a> Vigen&#232;re Ciphering Tool &#40;Cryptik&#41;
                     </p>
                     <div class="portfolio-image-container" id="cryptik-image-container"></div>
@@ -71,7 +71,7 @@
                 <div class="portfolio-unit" id="subnetterplusplus">
                     <p class="portfolio-name-header">
                         <a href="https://isocpp.org/" class="link force-no-decoration" target="_blank">
-                            <img class="inlined-image-container" src="resources/images/cpp-logo.png" width="20" height="23" alt="C Plus Plus Icon">
+                            <img class="inlined-image-container" src="resources/images/logos/cpp-logo.png" width="20" height="23" alt="C Plus Plus Icon">
                         </a> CLI Subnetter &#40;Subnetter++&#41;
                     </p>
                     <div class="portfolio-image-container" id="subnetterplusplus-image-container"></div>
