Filled out mission statement page

--- a/mission.html
+++ b/mission.html
@@ -25,23 +25,95 @@
         <div id="outer-div">
             <div id="left-main-div">
                 <div id="left-top-div">
-                    <div id="ethical-bg">
-                        <p>My Ethical Background</p>
+                    <div id="ethical-bg" class="scrollable">
+                        <p> My ethical background is very diverse. There are a lot of different factors which affect my global perspective and work ethic.
+                        </p>
+                        <p> My IT career started when I was a curious high schooler, for example. There are lots of things a high schooler might be curious 
+                            about doing with technology and server equipment, even if it is not the best idea. I learned this lesson very quickly when I 
+                            attended <a class="link" href="https://www.bluehills.org/" target="_blank">Blue Hills Regional Technical School's</a> 
+                            <a class="link" href="https://www.bluehills.org/tech-programs/computer-information-systems" target="_blank">Computer Information Systems</a> program.
+                        </p>
+                        <p> IT professionals hold a lot of power; a few clicks can result in an entire domain controller going offline and, as a result, 
+                            an entire domain crumbling to pieces. While network  redundancy can of course remediate this issue, it does not change the fact 
+                            that IT is a delicate field where the professionals a lot of of trust to do their work.
+                        </p>
+                        <p> While I was fortuante to have learned my lesson early, I understand not everyone is in that position. Therefore, hiring for an IT
+                            position is very stressful. There are so many nightmarish stories of IT professionals being upset with their employment and lashing
+                            out by causing severe damage to IT infrastructure. In short, it is imperative to me that I show I am trustworthy.
+                        </p>
                     </div>
                     <div id="portrait">
-                        <p>Portrait Photo</p>
+                        <iframe class="scrollable" width="588" height="331" src="https://www.youtube.com/embed/nu9xL0-F7wA?si=Y7bYw3C0Bvzr9S2O" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <p>Bad things happen when ethical guidelines are not followed. In the above video, StackOverflow did unethical things with their users' data.</p>
                     </div>
                 </div>
-                <div id="beliefs">
-                    <p>What I believe in</p>
+                <div id="beliefs" class="scrollable">
+                    <p> My work ethic and my moral compass are somewhat nuanced, so I wanted to dedicate this section to that specifically. Firstly, I believe 
+                        there are many different ways to solve a problem. For example, one way to set up an IP addressing scheme is to configure a DHCP, or 
+                        Dynamic Host Configuration Protocol, server. Another way to do the same thing is to set up static addressing on a network. It is very 
+                        common to have some devices configure their IP addresses via DHCP and have others get static addresses. While there are multiple ways to
+                        solve problems effectively, there are just as many, if not more, ways to solve a problem incorrectly. A bad solution might come up due to
+                        a lack of resources, poor time management, or sometimes simply laziness. Taking shortcuts and solving a problem incorrectly is inherently
+                        unethical; it can have severe negative consequences for end users. 
+                    </p>
+                    <p> An incorrect solution for an IP addressing scheme is to have all devices 
+                        permanently use something like APIPA, or Automatic Private IP Addressing. APIPA is meant to be used as an emergency backup in the absence of
+                        a real DHCP server. It works by having devices peer-to-peer negotiate their IP addresses. The addressing scheme always begins with 169.254.
+                        This solution is fast to implement, mainly because on Windows machines this can be done by doing literally nothing, but it will only work
+                        for a short period of time, especially on larger networks. Internet routability is also completely broken when using APIPA.
+                    </p>
+                    <p> In the problem solving process, one must prioritize fixing the problem to the fullest extent, considering other factors like budget and time 
+                        availability within reason. Unrelated personal issues or conflicts of interest, like not wanting to implement a solution because it is tedious, 
+                        should not influence a problem's solution. IT professionals must follow this guideline to do their jobs ethically and effectively.
+                    </p>
+                    <p> For an example I can give, at some point in my college career, I started working at Target on the weekends to help me get through it. I worked 
+                        night shifts, where we closed the registers when the store closed. Closing the registers involves handling a lot of money. Handling a lot of 
+                        money means there are many opportunities to steal, so only highly trusted people are allowed to close the registers. Closing the registers is a 
+                        sort of problem that must be solved, and the solution is to put the money in the sections where they belong. The solution is 
+                        <span class="italic">not</span> to put the money in my pocket. I have a perfectly clean record in every place where I have been granted trust,
+                        and I plan on keeping it that way.
+                    </p>
                 </div>
             </div>
             <div id="right-main-div">
-                <div>
-                    <p>Hi</p>
+                <div id="acm-code" class="scrollable">
+                    <p> One page which I use as reference for any ethical questions or concerns I might have is the <a>Association of Computing and Machinery Code of Ethics</a>.
+                        Below is a list of their general guidelines which I find important:    
+                    </p>
+                    <ol>
+                        <a class="link force-no-decoration" href="https://www.acm.org/code-of-ethics#h-1.1-contribute-to-society-and-to-human-well-being,-acknowledging-that-all-people-are-stakeholders-in-computing." target="_blank">
+                            <li>Work to contribute to society and acknowledge all humans are affected by computing.</li>
+                        </a>
+                        <a class="link force-no-decoration" href="https://www.acm.org/code-of-ethics#h-1.2-avoid-harm." target="_blank">
+                            <li>Do not cause harm.</li>
+                        </a>
+                        <a class="link force-no-decoration" href="https://www.acm.org/code-of-ethics#h-1.3-be-honest-and-trustworthy." target="_blank">
+                            <li>Be honest and trustworthy.</li>
+                        </a>
+                        <a class="link force-no-decoration" href="https://www.acm.org/code-of-ethics#h-1.4-be-fair-and-take-action-not-to-discriminate." target="_blank">
+                            <li>Take care to be fair and not discriminate.</li>
+                        </a>
+                        <a class="link force-no-decoration" href="https://www.acm.org/code-of-ethics#h-1.5-respect-the-work-required-to-produce-new-ideas,-inventions,-creative-works,-and-computing-artifacts." target="_blank">
+                            <li>Respect creativity and ideas that can help others; do not keep them hidden.</li>
+                        </a>
+                        <a class="link force-no-decoration" href="https://www.acm.org/code-of-ethics#h-1.6-respect-privacy." target="_blank">
+                            <li>Respect privacy.</li>
+                        </a>
+                        <a class="link force-no-decoration" href="https://www.acm.org/code-of-ethics#h-1.7-honor-confidentiality." target="_blank">
+                            <li>Honor confidentiality.</li>
+                        </a>
+                    </ol>
                 </div>
-                <div>
-                    <p>Hi</p>
+                <div id="sysadmin-book" class="scrollable">
+                    <p> Another ethical reference I have at my disposal is a book I adore &mdash; 
+                        <a class="link" href="https://the-sysadmin-book.com/" target="_blank"><span class="italic">The Practice of System and Network Administration</span> &ndash; Third Edition</a> 
+                        by Thomas Limoncelli, Christina Hoagan, and Strata Chalup. This book has a lot of different sections on handling different situations effectively, like 
+                        how to negotiate effectively with people whom one wants to keep a good relationship with, how to help angry or confrontational clients, or the right 
+                        things to do around auditors and law enforcement.
+                    </p>
+                    <p> Interestingly, <span class="italic">The Practice of System and Network Administration</span> is not designed to be just an ethical guideline. It has many 
+                        sections detailing how to be an effective, helpful, and ethical IT professional, and I would strongly recommend the book to anyone looking for more 
+                        information on the practice of IT and even more so for system administration.</p>
                 </div>
                 <p class="hidden"><a href="#start-content">Skip Navigation and Go Back to Start</a></p>
                 <nav id="navbar">
