Filled out resume page

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                         </div>
                     </div>
                     <div id="credentials" class="scrollable">
-                        <a href="https://www.comptia.org/certifications/a" class="link" target="_blank"><img src="resources/images/certifications/aplus-icon.svg" width="100" height="100"></a>
+                        <!-- <a href="https://www.comptia.org/certifications/a" class="link" target="_blank"><img src="resources/images/certifications/aplus-icon.svg" width="100" height="100"></a>
                         <a href="https://w3.testout.com/pro-certifications/pc-pro" class="link" target="_blank"><img src="resources/images/certifications/testout-icon.png"></a>
-                        <a href="https://meta.extremenetworks.com/e_certifications/extreme-networks-sales-specialist/" class="link" target="_blank"><img src="resources/images/certifications/ess-icon.png"></a>
+                        <a href="https://meta.extremenetworks.com/e_certifications/extreme-networks-sales-specialist/" class="link" target="_blank"><img src="resources/images/certifications/ess-icon.png"></a> -->
                         <p class="hidden"></p>
                         
                     </div>
