Updated embed element citation

--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div id="resume-file">
-                <embed src="resources/downloadables/rsmaller-resume.pdf">
+                <embed src="resources/downloadables/rsmaller-resume.pdf"> <!-- Embed element cited from https://stackoverflow.com/questions/17784037/how-to-display-pdf-file-in-html -->
             </div>
             <div id="right-div">
                 <div id="comments">
