Updated shortcut icons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <link href="styles/main_styles.css" rel="stylesheet">
         <link href="styles/links_styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bitter" rel="stylesheet">
-        <title>Cover Page</title>
+        <link rel="shortcut icon" href="resources/images/icons/html5-icon.png">
+        <title>Ryan Smaller - IT B.S.</title>
     </head>
     <body>
             <div id="body-footer-div">
