--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
         <link href="styles/portfolio_styles.css" rel="stylesheet">
         <link href="styles/links_styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Bitter" rel="stylesheet">
+        <link rel="shortcut icon" href="resources/images/icons/html5-icon.png">
         <title>Portfolio</title>
     </head>
     <body>
